--- a/zpodsdk_builder/templates/endpoint_macros.py.jinja
+++ b/zpodsdk_builder/templates/endpoint_macros.py.jinja
@@ -1,4 +1,5 @@
 {% from "property_templates/helpers.jinja" import guarded_statement %}
+{% from "helpers.jinja" import safe_docstring %}
 
 {% macro header_params(endpoint) %}
 {% if endpoint.header_parameters %}
@@ -143,8 +144,8 @@ json_body=json_body,
 {% endfor %}
 {% endmacro %}
 
-{% macro docstring(endpoint, return_string) %}
-"""{% if endpoint.summary %}{{ endpoint.summary | wordwrap(100)}}
+{% macro docstring_content(endpoint, return_string, is_detailed) %}
+{% if endpoint.summary %}{{ endpoint.summary | wordwrap(100)}}
 
 {% endif -%}
 {%- if endpoint.description %} {{ endpoint.description | wordwrap(100) }}
@@ -167,6 +168,13 @@ Raises:
     httpx.TimeoutException: If the request takes longer than Client.timeout.
 
 Returns:
+{% if is_detailed %}
     Response[{{ return_string }}]
-"""  # noqa e501
+{% else %}
+    {{ return_string }}
+{% endif %}
+{% endmacro %}
+
+{% macro docstring(endpoint, return_string, is_detailed) %}
+{{ safe_docstring(docstring_content(endpoint, return_string, is_detailed)) }}
 {% endmacro %}
