--- a/zpodsdk_builder/templates/endpoint_module.py.jinja
+++ b/zpodsdk_builder/templates/endpoint_module.py.jinja
@@ -34,8 +34,8 @@ class {{endpoint.name|replace("_", " ")|title|replace(" ", "")}}:
             "method": "{{ endpoint.method }}",
             {% if endpoint.path_parameters %}
             "url": "{{ endpoint.path }}".format(
-            {%- for parameter in endpoint.path_parameters.values() -%}
-            {{parameter.name}}={{parameter.python_name}},
+            {%- for parameter in endpoint.path_parameters -%}
+            {{parameter.python_name}}={{parameter.python_name}},
             {%- endfor -%}
             ),
             {% else %}
